spacing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,8 +41,8 @@ body {
   top: 50%;
   left: 50%;
   width: 500px;
-  height: 150px;
-  margin: -100px -300px;
+  height: 200px;
+  margin: -150px -300px;
   padding: 50px;
   background-color: rgba(255,255,255,0.9);
   border-radius: 20px;
